Reuse existing validation and logging code